--- a/build.gradle
+++ b/build.gradle
@@ -25,19 +25,26 @@ targetCompatibility = 1.8
 
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-
-    // JPA Data (We are going to use Repositories, Entities, Hibernate, etc...)
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    // Use MySQL Connector-J
-    compile 'mysql:mysql-connector-java'
-
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '2.0.3.RELEASE', ext: 'pom'
+    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.3.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.0.3.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.9.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.3.RELEASE'
+    compile group: 'com.netflix.feign', name: 'feign-okhttp', version: '7.1.0'
+    compile('org.springframework.boot:spring-boot-starter-web:2.0.3.RELEASE')
+    runtime group: 'com.netflix.feign', name: 'feign-core', version: '8.18.0'
+    compile group: 'com.netflix.feign', name: 'feign-gson', version: '8.18.0'
+    compile group: 'com.wix', name: 'wix-embedded-mysql', version: '4.1.2'
     compileOnly 'org.projectlombok:lombok:1.16.16'
+    compile 'mysql:mysql-connector-java:5.1.46'
+    compile 'io.jsonwebtoken:jjwt:0.9.0'
 
-    testCompile('org.springframework.boot:spring-boot-starter-test')
 
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
-    testCompile("junit:junit")
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompileOnly 'org.projectlombok:lombok:1.16.16'
+    testCompile 'org.assertj:assertj-core:3.8.0'
+    testCompile 'au.com.dius:pact-jvm-consumer-junit_2.11:3.5.10'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:1.5.9.RELEASE'
+
+
+
 }
