Creates JWT and authenticates users

--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,6 @@ targetCompatibility = 1.8
 
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '2.0.3.RELEASE', ext: 'pom'
-    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.3.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.0.3.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.9.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.0.3.RELEASE'
     compile group: 'com.netflix.feign', name: 'feign-okhttp', version: '7.1.0'
     compile('org.springframework.boot:spring-boot-starter-web:2.0.3.RELEASE')
@@ -38,6 +35,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.16.16'
     compile 'mysql:mysql-connector-java:5.1.46'
     compile 'io.jsonwebtoken:jjwt:0.9.0'
+    compile 'org.mindrot:jbcrypt:0.4'
 
 
     testCompileOnly 'org.projectlombok:lombok:1.16.16'
